# stamp_streamlit_cloud

./: .gitignore  Dockerfile  README_DEPLOY.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: divergences_from_R.md  methodology.md  reproducibility.md
gui/: data_loader.py  main.py  test_data_loader.py
gui/analysis_modules/: age_specific.py.tmp.17704.b7add5a9c76f  aging_timeline.py  gene_sharing.py  group_comparison.py  migration_page.py  multi_tissue.py.tmp.17704.2ff16f1d312d  single_gene.py  stamp_generator.py  stamp_generator.py.tmp.17704.b523d73575d7  switch_direction.py  threshold_sweep.py  tissue_comparison.py  upload_analysis.py  version_comparison.py  welcome.py
gui/components/: __init__.py  downloads.py  styling.py
gui/data/: all_genes.txt
gui/utils/: __init__.py  analysis.py  parsing.py  plots.py  responsive_utils.py  tissue_mapping.py
scripts/: 00_dump_cassandra.py  00b_load_gtex_v8.py  01_normalize.py  02_switching.py  03_jaccard.py  04_ppi.py  05_migration.py  06_threshold_sweep.py  07_compare_versions.py  audit_epsilon.py  run_all.py
scripts/validation/: 08_permutation_global_simple.py  09_inspect_permutation_results.py  10_plot_permutation_global.py  11_check_sample_level_inputs.py  (+4 more)
stamp/: __init__.py  compare_versions.py  config.py  io.py  jaccard.py  migration.py  normalize.py  plots.py  ppi.py  switching.py  threshold.py  tissues.py
tests/: conftest.py  test_complete_mode_outputs.py  test_io.py  test_jaccard.py  test_migration.py  test_normalize.py  test_ppi.py  test_switching.py  test_tissues.py
(+208 files in other folders)
