[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stamp"
version = "0.1.0"
description = "Python implementation of STAMP framework (Kahveci et al. 2025)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14",
    "cassandra-driver>=3.28",
    "scipy>=1.11",
    "networkx>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["stamp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
